--- a/MonolithFullStackTemplate/templateUI/src/assets/i18n/gr.json
+++ b/MonolithFullStackTemplate/templateUI/src/assets/i18n/gr.json
@@ -1,8 +1,19 @@
 {
   "header": {
-    "home": "Σπίτι",
+    "home": "Αρχική σελίδα",
     "users": "Χρήστες",
     "people": "Ανθρωποι",
+    "register": "Εγγραφή",
+    "login": "Σύνδεση",
     "logOut": "Αποσύνδεση"
+  },
+  "home": {
+    "title": "Καλώς ορίσατε"
+  },
+  "userList": {
+    "title": "Χρήστες"
+  },
+  "personList": {
+    "title": "Ανθρωποι"
   }
 }
