--- a/MonolithFullStackTemplate/templateUI/src/assets/i18n/gr.json
+++ b/MonolithFullStackTemplate/templateUI/src/assets/i18n/gr.json
@@ -10,10 +10,30 @@
   "home": {
     "title": "Καλώς ορίσατε"
   },
+  "form": {
+  "submit": "υποβάλλουν",
+  "clear": "Σαφή",
+  "chooseADate": "Επιλέξτε μια ημερομηνία"
+},
   "userList": {
     "title": "Χρήστες"
   },
   "personList": {
-    "title": "Ανθρωποι"
+    "title": "Ανθρωποι",
+    "add": "Δημιουργία χρήστη"
+  },
+  "person": {
+    "form": {
+      "newPerson": "Νέο άτομο",
+      "updatePerson": "Ενημέρωση ατόμου"
+    },
+    "firstName": "Ονομα",
+    "lastName": "Επίθετο",
+    "dateOfBirth": "Ημερομηνια γεννησης",
+    "email": "Email",
+    "gender": "Γένος",
+    "maritalStatus": "οικογενειακή κατάσταση",
+    "numberOfDependants": "Αριθμός Εξαρτωμένων",
+    "telephoneNumber": "Αριθμός τηλεφώνου"
   }
 }
