--- a/MonolithFullStackTemplate/templateUI/src/assets/i18n/pt-br.json
+++ b/MonolithFullStackTemplate/templateUI/src/assets/i18n/pt-br.json
@@ -10,10 +10,30 @@
   "home": {
     "title": "Bem vindo"
   },
+  "form": {
+    "submit": "Salvar",
+    "clear": "Limpar"
+  },
   "userList": {
     "title": "Usuários"
   },
   "personList": {
-    "title": "Pessoas"
+    "title": "Pessoas",
+    "add": "Criar pessoa",
+    "chooseADate": "Seleione uma data"
+  },
+  "person": {
+    "form": {
+      "newPerson": "Criar pessoa",
+      "updatePerson": "Atualizar pessoa"
+    },
+    "firstName": "Nome",
+    "lastName": "Sobrenome",
+    "dateOfBirth": "Data de nascimento",
+    "email": "Email",
+    "gender": "Sexo",
+    "maritalStatus": "Estado civil",
+    "numberOfDependants": "Número de dependentes",
+    "telephoneNumber": "Número do telefone"
   }
 }
