Template UI - Added translations to login and register

--- a/MonolithFullStackTemplate/templateUI/src/assets/i18n/gr.json
+++ b/MonolithFullStackTemplate/templateUI/src/assets/i18n/gr.json
@@ -21,6 +21,23 @@
     "clear": "Σαφή",
     "chooseADate": "Επιλέξτε μια ημερομηνία"
   },
+  "registration": {
+    "title": "Εγγραφή ",
+    "firstName": "Ονομα",
+    "lastName": "Επίθετο",
+    "email": "Email",
+    "password": "Κωδικός πρόσβασης",
+    "dateOfBirth": "Ημερομηνια γεννησης",
+    "login": "Σύνδεση",
+    "register": "ΚΑΝΩ ΕΓΓΡΑΦΗ"
+  },
+  "login": {
+    "title": "Σύνδεση",
+    "email": "Email",
+    "password": "Κωδικός πρόσβασης",
+    "register": "Εγγραφή",
+    "login": "ΣΥΝΔΕΣΗ"
+  },
   "userProfile": {
     "title": "Προφίλ χρήστη",
     "firstName": "Ονομα",
